--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9GGLYR819"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag('js', new Date())
+
+            gtag('config', 'G-M9GGLYR819')
+        </script>
+        <link rel="icon" type="image/png" href="/favicon.png" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <title>Pomodoro Tasks: Online Pomodoro Timer for Focus & Productivity</title>
+
+        <meta 
+            name="description" 
+            content="Boost your productivity with Pomodoro Tasks. A free online Pomodoro timer with a task manager to optimize your study and work sessions. Start focusing now!" 
+        />
+
+        <meta 
+            name="keywords" 
+            content="pomodoro, pomodoro technique, pomodoro timer, focus timer, task manager, productivity, focus, to-do list, study timer, online pomodoro" 
+        />
+        
+        <link rel="canonical" href="https://www.pomodorotasks.site/" />
+
+        <meta property="og:title" content="Pomodoro Tasks: Online Pomodoro Timer for Focus & Productivity" />
+        <meta property="og:description" content="Boost your productivity and focus with our Pomodoro timer and task manager." />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.pomodorotasks.site/" />
+        <meta property="og:image" content="https://www.pomodorotasks.site/og-image.png" />
+        <meta property="og:site_name" content="Pomodoro Tasks" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Pomodoro Tasks: Online Pomodoro Timer for Focus & Productivity" />
+        <meta name="twitter:description" content="Boost your productivity and focus with our Pomodoro timer and task manager." />
+        <meta name="twitter:image" content="https://www.pomodorotasks.site/og-image.png" />
+
+        <link rel="icon" href="/favicon.png" type="image/png" />
+
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
